feat: Implemented POST verification of users via SMS.
It is not finished, but these changes are the first loc of this feature
