# api/oas-doc.yaml
@@ -118,6 +118,75 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorModel'
+    
+  /api/v1/verify:
+    post:
+      tags:
+        - Verification
+      x-swagger-router-controller: AuthController
+      description: Verifies the user phone number
+      operationId: verify
+      requestBody:
+        x-name: phoneNumber
+        description: User phone number
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+      responses:
+      '201':
+        description: Success
+        content:
+          application/json:
+            schema:
+              type: string
+      '400':
+        description: Bad Request
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/errorModel'
+      '500':
+        description: Internal Server Error
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/errorModel'
+    put:
+      tags:
+        - Verification
+      x-swagger-router-controller: AuthController
+      description: Verifies the user phone number
+      operationId: verify
+      requestBody:
+        x-name: phoneNumber
+        description: User phone number
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+      responses:
+      '201':
+        description: Success
+        content:
+          application/json:
+            schema:
+              type: string
+      '400':
+        description: Bad Request
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/errorModel'
+      '500':
+        description: Internal Server Error
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/errorModel'
+
 components:
   schemas:
     errorModel:
